<resources>
    <string name="app_name">SavorCar</string>
    <string name="travels">Поездки</string>
    <string name="create">Создать</string>
    <string name="empty"/>
    <string name="registration">Регистрация</string>
    <string name="to">Куда</string>
    <string name="registration_title">Введите данные для регистрации</string>
    <string name="email">Эл.почта</string>
    <string name="town">Город</string>
    <string name="birthday">Дата рождение</string>
    <string name="gender">Пол</string>
    <string name="name">Имя</string>
    <string name="mark">Марка</string>
    <string name="login">Вход</string>
    <string name="number">Номер телефон</string>
    <string name="rule_text">Я согласен (-на) на Условия использования приложения, и подтверждаю.</string>
    <string name="fromCityError">Город отправления не заполнено</string>

    <string name="toCityError">Город прибытия не заполнено</string>
    <string name="price">Цена</string>
    <string name="passenger_price">Всего за 1 пассажира</string>
    <string name="place_count">Количество мест</string>
    <string name="profile">Профиль</string>
    <string name="request_senden">Поездка опубликованно! Пассажири смогут забронировать места и отправиться с вами в дорогу</string>
    <string name="greate_travel">Создание поездок</string>
    <string name="go_abourt">Хотите обратно приехать?</string>
    <string name="reverse_trip">Обратная поездка</string>
    <string name="not_found_error">Ёще нет поездок в этот день</string>
    <string name="one">1</string>
    <string name="bookinf_success_message">Забронировано \nПриятной поездки!</string>
    <string name="accept">Да</string>
    <string name="decline">Нет</string>
    <string name="cancle_booking">Отменить бронь</string>
    <string name="home_title">В путь по-вашему</string>
    <string name="rule_title">Введите номер телефона для авторизации</string>
    <string name="edit_photo">Редактировать фото</string>
    <string name="edit_profile">Редактировать мою информацию</string>
    <string name="search_trip_title">Поиск поездек</string>
    <string name="today">Сегодня</string>
    <string name="passenger_title">1 Пассажир</string>
    <string name="from">Откуда</string>
    <string name="where_are_you">Куда вы едете?</string>
    <string name="giveing_reviews">Оставленные отзывы</string>
    <string name="all_reviews">Полученные отзывы</string>
    <string name="excellent">Отлично</string>
    <string name="norm_title">Нормально</string>
    <string name="bad_title">Ожидание не оправдались</string>
    <string name="very_bad">Не понравилось</string>
    <string name="good">Хорошо</string>
    <string name="getting_revies">Полученные отзывы</string>
    <string name="sending_reviews">Оставленные отзывы</string>
    <string name="all_history">Смотреть архивные поездки</string>
    <string name="canceling_booking_title">Вы в одном шаге от отмены бронь пассажира.</string>
    <string name="confirm_booking_title">Вы в одном шаге для подверждение бронирования пассажира.</string>
    <string name="confirm_bron">Подвердить бронь</string>
    <string name="save">Сохранить</string>
    <string name="street_to_hint">Улица, район прибытие</string>
    <string name="street_from">Улица, район отправление</string>
    <string name="not_found_title">Здесь вы найдете все ваши бронирования, а также обрабатываемые и выполненные возвраты за последние два года.</string>
    <string name="preference_title">Изменить предпочтение</string>
    <string name="yes">Да, конечно</string>
    <string name="time_error">Заполните время поездки</string>
    <string name="price_error">Заполните цена поездки</string>
    <string name="plan_title">План поездки</string>
    <string name="search_title">Куда вы хотите поехать?</string>
    <string name="surname">Фамилия</string>
    <string name="search_travel_title">Поиск поездки</string>
    <string name="search">Поиск</string>
    <string name="time">Время</string>
    <string name="go">Поехали</string>
    <string name="token_prefix">empty</string>
    <string name="home_titile">В путь по - вашему</string>
</resources>