<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <ImageView
                    android:id="@+id/backEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/empty"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/registration_title"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/surnameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname"
                        android:inputType="text"
                        android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"

                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"

                        android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/townLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"

                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp">

                <AutoCompleteTextView
                        android:id="@+id/town"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/town"
                        android:padding="16dp"

                        android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/dateLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:endIconContentDescription="@string/empty"
                        app:endIconDrawable="@drawable/ic_calendar"
                        app:endIconMode="custom"
                        app:errorEnabled="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/genderLayout"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/birthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/birthday"
                            android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/genderLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/dateLayout"
                        app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                            android:id="@+id/gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/gender"
                            android:padding="16dp"

                            android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>



            <Button
                    android:id="@+id/registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:padding="16dp"
                    android:text="@string/registration" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</layout>